--- a/backend-java21-springboot/pom.xml
+++ b/backend-java21-springboot/pom.xml
@@ -40,8 +40,14 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-tomcat</artifactId>
-      <scope>provided</scope> <!-- Important pour un WAR déployé sur Tomcat -->
+      <scope>provided</scope>
     </dependency>
+    
+  	<dependency>
+    	<groupId>org.springdoc</groupId>
+    	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    	<version>2.5.0</version>
+  	</dependency>
 
   </dependencies>
 
