--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -28,7 +28,8 @@
     "nodemon": "3.1.10",
     "supertest": "7.1.0",
     "swagger-jsdoc": "6.2.8",
-    "swagger-ui-express": "5.0.1"
+    "swagger-ui-express": "5.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
