Fix tests & lint on backend-javascrip-cjs

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server",
     "dev": "nodemon src/server",
     "lint": "eslint .",
-    "prettier": "prettier --check .",
+    "prettier:check": "prettier --check .",
+    "prettier": "prettier --write .",
     "test": "jest",
     "coverage": "jest --coverage",
     "test:unit": "jest src/modules/person/__tests__/unit",
