--- a/backend-javascript-cjs-old/package.json
+++ b/backend-javascript-cjs-old/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write .",
     "test": "jest",
     "coverage": "jest --coverage",
+    "test:security": "npm test -- security.test.js",
     "test:unit": "jest src/modules/person/__tests__/unit",
     "test:integration": "jest __tests__/integration",
     "test:e2e": "jest __tests__/e2e",
@@ -33,6 +34,7 @@
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
     "winston": "^3.17.0",
+    "xss-clean": "^0.1.4",
     "zod": "^3.24.3"
   },
   "devDependencies": {
