--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -14,7 +14,9 @@
     "coverage": "jest --coverage",
     "build": "webpack",
     "serve": "node dist/bundle",
-    "generate-project-structure": "node tools/scripts/generate-project-structure.js"
+    "generate-project-structure": "node tools/scripts/generate-project-structure.js",
+    "docker:build": "docker build -t backend-javascript-esm .",
+    "docker:run": "docker run -p 3000:3000 backend-javascript-esm"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,9 @@
     "cors": "2.8.5",
     "express": "5.1.0",
     "helmet": "8.1.0",
-    "nodemon": "3.1.9"
+    "nodemon": "3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
@@ -33,7 +37,7 @@
     "globals": "16.0.0",
     "jest": "29.7.0",
     "supertest": "7.1.0",
-    "webpack": "5.99.6",
+    "webpack": "5.99.7",
     "webpack-cli": "6.0.1"
   }
 }
