Add docker scripts on backend-javascript-cjs

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -17,8 +17,21 @@
     "build": "webpack",
     "serve": "node dist/bundle",
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
+    "docker:list-images": "docker images",
+    "docker:list-containers": "docker ps -a",
     "docker:build": "docker build -t backend-javascript-cjs .",
-    "docker:run": "docker run -p 3000:3000 backend-javascript-cjs"    
+    "docker:remove-image": "docker rmi backend-javascript-cjs",
+    "docker:run": "docker run -d --name backend-javascript-cjs-container -p 3000:3000 backend-javascript-cjs",
+    "docker:stop": "docker stop backend-javascript-cjs-container",
+    "docker:remove-container": "docker rm backend-javascript-cjs-container",
+    "docker:stop-remove": "docker stop backend-javascript-cjs-container && docker rm backend-javascript-cjs-container",
+    "docker:force-remove": "docker rm -f backend-javascript-cjs-container",
+    "docker:clean-all": "npm run docker:force-remove && npm run docker:remove-image",
+    "compose:up": "docker-compose up -d",
+    "compose:up:build": "docker-compose up -d --build",
+    "compose:down": "docker-compose down",
+    "compose:logs": "docker-compose logs -f",
+    "compose:restart": "docker-compose down && docker-compose up -d"
   },
   "keywords": [],
   "author": "",
