Add prod & development .env

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server",
-    "dev": "nodemon src/server",
+    "start": "cross-env NODE_ENV=development node src/server",
+    "start:prod": "cross-env NODE_ENV=production node src/server",
+    "dev": "cross-env NODE_ENV=development nodemon src/server",
+    "dev:prod": "cross-env NODE_ENV=production nodemon src/server",
     "lint": "eslint .",
     "prettier:check": "prettier --check .",
     "prettier": "prettier --write .",
@@ -14,8 +16,10 @@
     "test:unit": "jest src/modules/person/__tests__/unit",
     "test:integration": "jest __tests__/integration",
     "test:e2e": "jest __tests__/e2e",
-    "build": "webpack",
-    "serve": "node dist/bundle",
+    "build": "webpack --mode development",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "serve": "cross-env NODE_ENV=production node dist/bundle",
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
     "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
     "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
@@ -24,8 +28,8 @@
     "docker:build": "docker build -t backend-javascript-cjs .",
     "docker:run": "docker run -d --name backend-javascript-cjs-container -p 3000:3000 backend-javascript-cjs",
     "docker:stop": "docker stop backend-javascript-cjs-container",
-    "docker:remove-image": "docker rmi backend-javascript-cjs",
     "docker:remove-container": "docker rm backend-javascript-cjs-container",
+    "docker:remove-image": "docker rmi backend-javascript-cjs",
     "docker:stop-remove": "docker stop backend-javascript-cjs-container && docker rm backend-javascript-cjs-container",
     "docker:force-remove": "docker rm -f backend-javascript-cjs-container",
     "docker:clean-all": "npm run docker:force-remove && npm run docker:remove-image",
@@ -33,7 +37,6 @@
     "compose:up:build": "docker-compose up -d --build",
     "compose:up:force": "docker-compose up -d --build --force-recreate",
     "compose:down": "docker-compose down",
-    "compose:logs": "docker-compose logs -f",
     "compose:restart": "docker-compose down && docker-compose up -d",
     "compose:rebuild-force": "docker-compose down && docker-compose up -d --build --force-recreate"
   },
@@ -56,6 +59,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
+    "cross-env": "^7.0.3",
     "eslint": "9.25.1",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-prettier": "5.2.6",
