--- a/backend-javascript-cjs/.gitignore
+++ b/backend-javascript-cjs/.gitignore
@@ -2,6 +2,8 @@
 node_modules/
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -13,11 +15,15 @@ Thumbs.db
 
 # dotenv files
 .env
-.env.*.local
+.env.*
+!.env.development
+!.env.production
+!.env.example
 
 # Tests & coverage
 coverage/
 jest-output.log
+__snapshots__/
 
 # Build output
 dist/
@@ -31,14 +37,30 @@ build/
 # Temp files
 *.tmp
 *.bak
-*.log
 
 # Lint & format
 .eslintcache
 
-# Optional: Webpack cache
+# Webpack
 .cache/
 webpack-stats.json
 
-# Optional: Test snapshots
-__snapshots__/
+# Docker
+docker-compose.override.yml
+.docker/
+
+# PM2
+pids/
+pids/*.pid
+pids/*.lock
+
+# Misc
+*.tgz
+*.tar.gz
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+.env.test
+node-repl-history
+yarn.lock.backup
