--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node src/server",
-    "start:prod": "cross-env NODE_ENV=production node src/server",
     "dev": "cross-env NODE_ENV=development nodemon src/server",
     "dev:prod": "cross-env NODE_ENV=production nodemon src/server",
+    "start": "cross-env NODE_ENV=development node src/server",
+    "start:prod": "cross-env NODE_ENV=production node src/server",
     "lint": "eslint .",
     "prettier:check": "prettier --check .",
     "prettier": "prettier --write .",
@@ -16,10 +16,10 @@
     "test:unit": "jest src/modules/person/__tests__/unit",
     "test:integration": "jest __tests__/integration",
     "test:e2e": "jest __tests__/e2e",
-    "build": "webpack --mode development",
-    "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production",
-    "serve": "cross-env NODE_ENV=production node dist/bundle",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "serve": "cross-env NODE_ENV=production node dist/bundle.js",
+    "serve:dev": "cross-env NODE_ENV=development node dist/bundle.js",
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
     "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
     "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
@@ -47,6 +47,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.5.0",
+    "dotenv-webpack": "^8.1.0",
     "express": "5.1.0",
     "express-rate-limit": "7.5.0",
     "helmet": "8.1.0",
@@ -54,6 +55,7 @@
     "supertest": "7.1.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
+    "webpack-node-externals": "^3.0.0",
     "winston": "3.17.0",
     "zod": "^3.24.3"
   },
