--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -13,9 +13,9 @@
     "prettier": "prettier --write .",
     "test": "jest",
     "coverage": "jest --coverage",
-    "test:unit": "jest src/modules/person/__tests__/unit",
-    "test:integration": "jest __tests__/integration",
-    "test:e2e": "jest __tests__/e2e",
+    "test:unit": "jest src/modules/**/__tests__/unit",
+    "test:integration": "jest src/__tests__/integration",
+    "test:e2e": "jest src/__tests__/e2e",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "serve": "cross-env NODE_ENV=production node dist/bundle.js",
