--- a/backend-typescript/.prettierrc
+++ b/backend-typescript/.prettierrc
@@ -1,4 +1,11 @@
 {
   "singleQuote": true,
-  "semi": true
+  "semi": true,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
