--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node app.ts",
-    "lint": "eslint \"./**/*.ts\""
+    "lint": "eslint \"./**/*.ts\"",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"    
   },
   "keywords": [],
   "author": "",
@@ -17,12 +20,17 @@
   "devDependencies": {
     "@eslint/js": "9.25.1",
     "@types/express": "5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.15.3",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "8.31.0",
     "@typescript-eslint/parser": "8.31.0",
     "eslint": "9.25.1",
     "eslint-plugin-prettier": "5.2.6",
     "globals": "16.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0"
