Improve generate-project-structure on backend starters

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -12,7 +12,8 @@
     "prettier:check": "prettier --check .",
     "prettier": "prettier --write .",
     "test": "jest",
-    "coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:unit": "jest src/modules/**/__tests__/unit",
     "test:integration": "jest src/__tests__/integration",
     "test:e2e": "jest src/__tests__/e2e",
