--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -11,7 +11,8 @@
     "test:integration": "jest __tests__/integration",
     "test:e2e": "jest __tests__/e2e",
     "test": "jest",
-    "coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "build": "webpack",
     "serve": "node dist/bundle",
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
