--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -4,36 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "ts-node src/app.ts",
+    "dev": "ts-node-dev src/app.ts",
     "lint": "eslint \"./**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "build": "webpack --config webpack.config.js",
+    "start:prod": "node dist/bundle.js",
+    "serve": "node dist/bundle.js",
     "generate-project-structure": "ts-node tools/scripts/generate-project-structure.ts"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "type": "commonjs",
   "dependencies": {
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
     "@types/express": "5.0.1",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "29.5.14",
     "@types/node": "22.15.3",
-    "@types/supertest": "^6.0.3",
+    "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.31.0",
     "@typescript-eslint/parser": "8.31.0",
     "eslint": "9.25.1",
     "eslint-plugin-prettier": "5.2.6",
     "globals": "16.0.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.0",
-    "ts-jest": "^29.3.2",
+    "jest": "29.7.0",
+    "supertest": "7.1.0",
+    "ts-jest": "29.3.2",
+    "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.31.0"
+    "typescript-eslint": "8.31.0",
+    "webpack": "5.99.7",
+    "webpack-cli": "6.0.1"
   }
 }
