fix tests & lint on backend js & typescript

--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -7,12 +7,13 @@
     "start": "node src/server",
     "dev": "nodemon src/server",
     "lint": "eslint .",
-    "test:unit": "jest src/modules/person/__tests__/unit",
-    "test:integration": "jest __tests__/integration",
-    "test:e2e": "jest __tests__/e2e",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "coverage": "jest --coverage",
+    "test:unit": "jest src/modules/person/__tests__/unit",
+    "test:integration": "jest __tests__/integration",
+    "test:e2e": "jest __tests__/e2e",
     "build": "webpack",
     "serve": "node dist/bundle",
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
