--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "ts-node-dev src/app.ts",
+    "start": "ts-node src/server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "lint": "eslint \"./**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "coverage": "jest --coverage",
+    "test:unit": "jest src/modules/**/__tests__/unit",
+    "test:integration": "jest src/__tests__/integration",
+    "test:e2e": "jest src/__tests__/e2e",
     "build": "webpack --config webpack.config.js",
     "start:prod": "node dist/bundle.js",
     "serve": "node dist/bundle.js",
