--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "generate-project-structure": "node tools/scripts/generate-project-structure.js",
-    "dev": "nodemon src/server",
-    "start": "node src/server",
+    "dev": "cross-env NODE_ENV=development nodemon src/server",
+    "dev:prod": "cross-env NODE_ENV=production nodemon src/server",
+    "start": "cross-env NODE_ENV=development node src/server",
+    "start:prod": "cross-env NODE_ENV=production node src/server",
     "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,6 +29,8 @@
   "dependencies": {
     "@babel/preset-env": "7.26.9",
     "cors": "2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "express": "5.1.0",
     "helmet": "8.1.0",
     "nodemon": "3.1.10",
