--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "generate-project-structure": "ts-node tools/scripts/generate-project-structure.ts",
-    "dev": "ts-node-dev src/server.ts",
-    "start": "ts-node src/server.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev src/server.ts",
+    "dev:prod": "cross-env NODE_ENV=production ts-node-dev src/server.ts",
+    "start": "cross-env NODE_ENV=development ts-node src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production ts-node src/server.ts",
     "lint": "eslint \"./**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -16,13 +18,14 @@
     "test:integration": "jest src/__tests__/integration",
     "test:e2e": "jest src/__tests__/e2e",
     "build": "webpack --config webpack.config.js",
-    "start:prod": "node dist/bundle.js",
     "serve": "node dist/bundle.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "express": "5.1.0",
     "ts-node-dev": "^2.0.0"
   },
