--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -24,10 +24,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.5.0",
+    "cross-env": "7.0.3",
+    "dotenv": "16.5.0",
     "express": "5.1.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
