add .env.test on backend-javascript-cjs

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -12,13 +12,13 @@
     "lint": "eslint .",
     "prettier:check": "prettier --check .",
     "prettier": "prettier --write .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "coverage": "jest --coverage",
-    "test:unit": "jest src/modules/**/__tests__/unit",
-    "test:integration": "jest src/__tests__/integration",
-    "test:e2e": "jest src/__tests__/e2e",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:unit": "cross-env NODE_ENV=test jest src/modules --testPathPattern=__tests__/unit",
+    "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
+    "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "serve": "node dist/bundle.js",
