fix docker run on backend-javascript-cjs

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -24,13 +24,14 @@
     "serve": "node dist/bundle.js",
     "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
     "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
-    "docker:list-images": "docker images",
     "docker:list-containers": "docker ps -a",
+    "docker:list-images": "docker images",
     "docker:build": "docker build -t backend-javascript-cjs .",
-    "docker:run": "docker run -d --name backend-javascript-cjs-container -p 3000:3000 backend-javascript-cjs",
-    "docker:stop": "docker stop backend-javascript-cjs-container",
     "docker:remove-container": "docker rm backend-javascript-cjs-container",
     "docker:remove-image": "docker rmi backend-javascript-cjs",
+    "docker:run": "npm run docker:remove-container && docker run -d --name backend-javascript-cjs-container -p 8080:8080 backend-javascript-cjs",
+    "docker:stop": "docker stop backend-javascript-cjs-container",
+    "docker:logs": "docker logs backend-javascript-cjs-container",
     "docker:stop-remove": "docker stop backend-javascript-cjs-container && docker rm backend-javascript-cjs-container",
     "docker:force-remove": "docker rm -f backend-javascript-cjs-container",
     "docker:clean-all": "npm run docker:force-remove && npm run docker:remove-image",
