fix & improve docker run on backend-javascript-cjs

--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -27,8 +27,8 @@
     "docker:list-containers": "docker ps -a",
     "docker:list-images": "docker images",
     "docker:build": "docker build -t backend-javascript-cjs .",
-    "docker:remove-container": "docker rm backend-javascript-cjs-container",
     "docker:remove-image": "docker rmi backend-javascript-cjs",
+    "docker:remove-container": "docker rm -f backend-javascript-cjs-container",
     "docker:run": "npm run docker:remove-container && docker run -d --name backend-javascript-cjs-container -p 8080:8080 backend-javascript-cjs",
     "docker:stop": "docker stop backend-javascript-cjs-container",
     "docker:logs": "docker logs backend-javascript-cjs-container",
