improve coverage on backend-javascript-cjs

--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -10,18 +10,35 @@
     "start": "node src/server",
     "start:prod": "cross-env NODE_ENV=production node src/server",
     "lint": "eslint .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "coverage": "jest --coverage",
-    "test:unit": "jest src/modules/person/__tests__/unit",
-    "test:integration": "jest __tests__/integration",
-    "test:e2e": "jest __tests__/e2e",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:unit": "cross-env NODE_ENV=test jest src/modules --testPathPattern=__tests__/unit",
+    "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
+    "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "serve": "node dist/bundle.js",
+    "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
+    "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
+    "docker:list-containers": "docker ps -a",
+    "docker:list-images": "docker images",
     "docker:build": "docker build -t backend-javascript-esm .",
-    "docker:run": "docker run -p 3000:3000 backend-javascript-esm"
+    "docker:remove-image": "docker rmi backend-javascript-esm",
+    "docker:remove-container": "docker rm -f backend-javascript-esm-container",
+    "docker:run": "npm run docker:remove-container && docker run -d --name backend-javascript-esm-container -p 8080:8080 backend-javascript-esm",
+    "docker:stop": "docker stop backend-javascript-esm-container",
+    "docker:logs": "docker logs backend-javascript-esm-container",
+    "docker:stop-remove": "docker stop backend-javascript-esm-container && docker rm backend-javascript-esm-container",
+    "docker:force-remove": "docker rm -f backend-javascript-esm-container",
+    "docker:clean-all": "npm run docker:force-remove && npm run docker:remove-image",
+    "compose:up": "docker-compose up -d",
+    "compose:up:build": "docker-compose up -d --build",
+    "compose:up:force": "docker-compose up -d --build --force-recreate",
+    "compose:down": "docker-compose down",
+    "compose:restart": "docker-compose down && docker-compose up -d",
+    "compose:rebuild-force": "docker-compose down && docker-compose up -d --build --force-recreate"
   },
   "keywords": [],
   "author": "",
