--- a/backend-javascript-esm/Dockerfile
+++ b/backend-javascript-esm/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --only=production
+RUN npm install
 
 COPY . .
 
-EXPOSE 3000
+RUN npm run build
 
-CMD ["node", "src/server.js"]
+EXPOSE 8080
+
+CMD ["node", "dist/bundle.js"]
