--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -47,6 +47,7 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
+    "compression": "^1.8.0",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "5.1.0",
