--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -18,7 +18,7 @@
     "coverage": "cross-env NODE_ENV=test jest --coverage",
     "test:unit": "cross-env NODE_ENV=test jest src/modules --testPathPattern=__tests__/unit",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
-    "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e",
+    "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e --testMatch '**/*.test.js'",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "serve": "node dist/bundle.js",
