--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -16,9 +16,13 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "coverage": "cross-env NODE_ENV=test jest --coverage",
+    "coverage:check": "node tools/scripts/coverage-check.js",
+    "coverage:badge": "node tools/scripts/generate-coverage-badge.js",
+    "coverage:full": "npm run test:coverage && npm run coverage:badge",
     "test:unit": "cross-env NODE_ENV=test jest src/modules --testPathPattern=__tests__/unit",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
     "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e --testMatch '**/*.test.js'",
+    "generate-swagger": "node tools/scripts/generate-swagger.js",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "serve": "node dist/bundle.js",
