--- a/backend-javascript-cjs/package.json
+++ b/backend-javascript-cjs/package.json
@@ -19,6 +19,10 @@
     "coverage:check": "node tools/scripts/coverage-check.js",
     "coverage:badge": "node tools/scripts/generate-coverage-badge.js",
     "coverage:full": "npm run test:coverage && npm run coverage:badge",
+    "test:env": "jest -- env.test.js",
+    "test:app": "jest -- app.test.js",
+    "test:server": "jest -- server.test.js",
+    "test:server.e2e": "jest -- server.e2e.test.js",
     "test:unit": "cross-env NODE_ENV=test jest src/modules --testPathPattern=__tests__/unit",
     "test:integration": "cross-env NODE_ENV=test jest src/__tests__/integration",
     "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e --testMatch '**/*.test.js'",
