--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -52,13 +52,13 @@
     "@babel/core": "7.26.10",
     "@babel/preset-env": "7.26.9",
     "@eslint/js": "9.25.1",
-    "@jest/globals": "^29.7.0",
+    "@jest/globals": "29.7.0",
     "babel-jest": "29.7.0",
     "babel-loader": "10.0.0",
     "eslint": "9.25.1",
     "express": "5.1.0",
     "globals": "16.0.0",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "supertest": "7.1.0",
     "webpack": "5.99.7",
     "webpack-cli": "6.0.1"
@@ -67,8 +67,8 @@
     "compression": "^1.8.0",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
-    "express-rate-limit": "^7.5.0",
-    "helmet": "^8.1.0",
+    "express-rate-limit": "7.5.0",
+    "helmet": "8.1.0",
     "nodemon": "3.1.10",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
