--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -23,7 +23,7 @@
     "test:e2e": "cross-env NODE_ENV=test jest src/__tests__/e2e",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "serve": "node dist/bundle.js",
+    "serve": "node dist/server.js",
     "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
     "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
     "docker:list-containers": "docker ps -a",
