--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -16,6 +16,10 @@
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "coverage": "cross-env NODE_ENV=test jest --coverage",
     "coverage:full": "npm run test:coverage && npm run coverage:badge",
+    "test:response-handler": "jest -- response-handler.test.js",
+    "test:logger": "jest src/infrastructure/logger/__tests__/unit/logger.test.js",
+    "test:error-logger": "jest -- error-logger.test.js",
+    "test:request-logger": "jest -- request-logger.test.js",
     "test:security": "jest -- security.test.js",
     "test:env": "jest -- env.test.js",
     "test:app": "jest -- app.test.js",
@@ -51,7 +55,7 @@
     "ecmascript-modules",
     "backend"
   ],
-  "author": "Danny - Ganatan",  
+  "author": "Danny - Ganatan",
   "license": "MIT",
   "type": "module",
   "devDependencies": {
