--- a/backend-javascript-esm/package.json
+++ b/backend-javascript-esm/package.json
@@ -59,19 +59,19 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@babel/core": "7.26.10",
-    "@babel/preset-env": "7.26.9",
+    "@babel/core": "7.27.1",
+    "@babel/preset-env": "7.27.1",
     "@eslint/js": "9.25.1",
     "@jest/globals": "29.7.0",
     "babel-jest": "29.7.0",
     "babel-loader": "10.0.0",
     "eslint": "9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-prettier": "5.2.6",
     "express": "5.1.0",
     "globals": "16.0.0",
     "jest": "29.7.0",
-    "prettier": "^3.5.3",
+    "prettier": "3.5.3",
     "supertest": "7.1.0",
     "webpack": "5.99.7",
     "webpack-cli": "6.0.1"
@@ -83,7 +83,7 @@
     "express-rate-limit": "7.5.0",
     "helmet": "8.1.0",
     "nodemon": "3.1.10",
-    "pg": "^8.15.6",
+    "pg": "8.15.6",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
     "winston": "3.17.0",
