--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -14,6 +14,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "coverage": "jest --coverage",
+    "test:app": "jest -- app.test.ts",
+    "test:server": "jest -- server.test.ts",
+    "test:server.e2e": "jest -- server.e2e.test.ts",
     "test:unit": "jest src/modules/**/__tests__/unit",
     "test:integration": "jest src/__tests__/integration",
     "test:e2e": "jest src/__tests__/e2e",
@@ -29,6 +32,7 @@
   "author": "Danny - Ganatan",
   "license": "MIT",
   "dependencies": {
+    "compression": "1.8.0",
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
     "express": "5.1.0",
@@ -36,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
+    "@types/compression": "^1.7.5",
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.3",
