--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -36,7 +36,9 @@
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
     "express": "5.1.0",
-    "ts-node-dev": "2.0.0"
+    "ts-node-dev": "2.0.0",
+    "winston": "^3.17.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
