Improve dcoker on backend-typescript & javascript

--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -22,7 +22,26 @@
     "test:e2e": "jest src/__tests__/e2e",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "serve": "node dist/server.js"
+    "serve": "node dist/server.js",
+    "docker:remove-all-containers": "FOR /f %i IN ('docker ps -a -q') DO docker rm -f %i",
+    "docker:remove-all-images": "FOR /f %i IN ('docker images -q') DO docker rmi -f %i",
+    "docker:list-containers": "docker ps -a",
+    "docker:list-images": "docker images",
+    "docker:build": "docker build -t backend-typescript .",
+    "docker:remove-image": "docker rmi backend-typescript",
+    "docker:remove-container": "docker rm -f backend-typescript-container",
+    "docker:run": "npm run docker:remove-container && docker run -d --name backend-typescript-container -p 8080:8080 backend-typescript",
+    "docker:stop": "docker stop backend-typescript-container",
+    "docker:logs": "docker logs backend-typescript-container",
+    "docker:stop-remove": "docker stop backend-typescript-container && docker rm backend-typescript-container",
+    "docker:force-remove": "docker rm -f backend-typescript-container",
+    "docker:clean-all": "npm run docker:force-remove && npm run docker:remove-image",
+    "compose:up": "docker-compose up -d",
+    "compose:up:build": "docker-compose up -d --build",
+    "compose:up:force": "docker-compose up -d --build --force-recreate",
+    "compose:down": "docker-compose down",
+    "compose:restart": "docker-compose down && docker-compose up -d",
+    "compose:rebuild-force": "docker-compose down && docker-compose up -d --build --force-recreate"    
   },
   "keywords": [
     "nodejs",
