--- a/backend-typescript/docker-compose.yml
+++ b/backend-typescript/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   backend:
     build:
       context: .
-    image: backend-javascript-esm
-    container_name: backend-javascript-esm-container
+    image: backend-typescript
+    container_name: backend-typescript-container
     ports:
       - "8080:8080"
     environment:
