--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -41,7 +41,7 @@
     "compose:up:force": "docker-compose up -d --build --force-recreate",
     "compose:down": "docker-compose down",
     "compose:restart": "docker-compose down && docker-compose up -d",
-    "compose:rebuild-force": "docker-compose down && docker-compose up -d --build --force-recreate"    
+    "compose:rebuild-force": "docker-compose down && docker-compose up -d --build --force-recreate"
   },
   "keywords": [
     "nodejs",
@@ -52,16 +52,20 @@
   "license": "MIT",
   "dependencies": {
     "compression": "1.8.0",
+    "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
     "express": "5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "8.1.0",
     "ts-node-dev": "2.0.0",
-    "winston": "^3.17.0",
-    "zod": "^3.24.3"
+    "winston": "3.17.0",
+    "zod": "3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
-    "@types/compression": "^1.7.5",
+    "@types/compression": "1.7.5",
+    "@types/cors": "2.8.17",
     "@types/express": "5.0.1",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.3",
