--- a/backend-typescript/package.json
+++ b/backend-typescript/package.json
@@ -56,7 +56,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
     "express": "5.1.0",
-    "express-rate-limit": "^7.5.0",
+    "express-rate-limit": "7.5.0",
     "helmet": "8.1.0",
     "ts-node-dev": "2.0.0",
     "winston": "3.17.0",
