--- a/backend-typescript/tsconfig.json
+++ b/backend-typescript/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "target": "es2016",                                 
-    "module": "commonjs",                               
-    "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,           
     "strict": true,                                     
-    "skipLibCheck": true                                
+    "skipLibCheck": true   ,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "module": "commonjs",   
+    "moduleResolution": "node",
   }
 }
