Improve backend-javascript-esm with fakeauth

--- a/backend-javascript-cjs-starter/.env.production
+++ b/backend-javascript-cjs-starter/.env.production
@@ -1,5 +1,22 @@
+# === ENVIRONNEMENT ===
+NODE_ENV=production
+APP_NAME=backend-javascript-esm
+APP_VERSION=1.1.1
+
+# === SERVEUR APPLICATION ===
+HOST=localhost
 PORT=8080
 CORS_ORIGIN=https://www.mon-domaine-en-prod.com
+
+# === BASE DE DONNEES ===
+DB_CLIENT=mock # pg | mysql | mock | mongo
+
+# === AUTHENTIFICATION MOCK ===
+FAKE_USER_NAME=editor_user
+FAKE_USER_ROLE=editor
+
+# === LOGGING ===
 LOG_LEVEL=info
-APP_NAME=backend-javascript-cjs
-APP_VERSION=1.1.1
+
+# === SWAGGER ===
+SWAGGER_ENABLED=true
