--- a/backend-typescript-starter/.env.development
+++ b/backend-typescript-starter/.env.development
@@ -1,6 +1,22 @@
-PORT=3000
-CORS_ORIGIN=http://localhost:3000
-LOG_LEVEL=debug
-APP_NAME=backend-typescript
+# === ENVIRONNEMENT ===
+NODE_ENV=development
+APP_NAME=backend-javascript-esm
 APP_VERSION=1.1.1
 
+# === SERVEUR APPLICATION ===
+HOST=localhost
+PORT=3000
+CORS_ORIGIN=http://localhost:3000
+
+# === BASE DE DONNEES ===
+DB_CLIENT=mock # pg | mysql | mock | mongo
+
+# === AUTHENTIFICATION MOCK ===
+FAKE_USER_NAME=editor_user
+FAKE_USER_ROLE=editor
+
+# === LOGGING ===
+LOG_LEVEL=info
+
+# === SWAGGER ===
+SWAGGER_ENABLED=true
