--- a/backend-javascript-esm-starter/.env.production
+++ b/backend-javascript-esm-starter/.env.production
@@ -1,5 +1,24 @@
-PORT=8080
-CORS_ORIGIN=https://www.mon-domaine-en-prod.com
-LOG_LEVEL=info
+# === ENVIRONNEMENT ===
+NODE_ENV=production
 APP_NAME=backend-javascript-esm
 APP_VERSION=1.1.1
+
+# === SERVEUR APPLICATION ===
+HOST=localhost
+PORT=8080
+CORS_ORIGIN=https://www.mon-domaine-en-prod.com
+
+# === BASE DE DONNEES ===
+DB_CLIENT=mock # pg | mysql | mock | mongo
+
+# === AUTHENTIFICATION MOCK ===
+FAKE_USER_NAME=editor_user
+FAKE_USER_ROLE=editor
+# FAKE_USER_NAME=admin_user
+# FAKE_USER_ROLE=admin
+
+# === LOGGING ===
+LOG_LEVEL=info
+
+# === SWAGGER ===
+SWAGGER_ENABLED=true
