--- a/backend-javascript-esm-starter/.env.test
+++ b/backend-javascript-esm-starter/.env.test
@@ -1,5 +1,24 @@
-PORT=4000
-CORS_ORIGIN=*
-LOG_LEVEL=error
+# === ENVIRONNEMENT ===
+NODE_ENV=test
 APP_NAME=backend-javascript-esm
 APP_VERSION=1.1.1
+
+# === SERVEUR APPLICATION ===
+HOST=localhost
+PORT=4000
+CORS_ORIGIN=*
+
+# === BASE DE DONNEES ===
+DB_CLIENT=mock # pg | mysql | mock | mongo
+
+# === AUTHENTIFICATION MOCK ===
+FAKE_USER_NAME=editor_user
+FAKE_USER_ROLE=editor
+# FAKE_USER_NAME=admin_user
+# FAKE_USER_ROLE=admin
+
+# === LOGGING ===
+LOG_LEVEL=info
+
+# === SWAGGER ===
+SWAGGER_ENABLED=true
