--- a/backend-typescript-starter/.env.test
+++ b/backend-typescript-starter/.env.test
@@ -1,5 +1,23 @@
+# === ENVIRONNEMENT ===
+NODE_ENV=production
+APP_NAME=backend-javascript-esm
+APP_VERSION=1.1.1
+
+# === SERVEUR APPLICATION ===
+HOST=localhost
 PORT=4000
 CORS_ORIGIN=*
-LOG_LEVEL=error
-APP_NAME=backend-typescript
-APP_VERSION=1.1.1
+
+
+# === BASE DE DONNEES ===
+DB_CLIENT=mock # pg | mysql | mock | mongo
+
+# === AUTHENTIFICATION MOCK ===
+FAKE_USER_NAME=editor_user
+FAKE_USER_ROLE=editor
+
+# === LOGGING ===
+LOG_LEVEL=info
+
+# === SWAGGER ===
+SWAGGER_ENABLED=true
