Add dbClient on roo.routes

--- a/backend-typescript-starter/.env.test
+++ b/backend-typescript-starter/.env.test
@@ -1,5 +1,5 @@
 # === ENVIRONNEMENT ===
-NODE_ENV=production
+NODE_ENV=test
 APP_NAME=backend-typescript
 APP_VERSION=1.1.1
 
@@ -8,13 +8,14 @@ HOST=localhost
 PORT=4000
 CORS_ORIGIN=*
 
-
 # === BASE DE DONNEES ===
 DB_CLIENT=mock # pg | mysql | mock | mongo
 
 # === AUTHENTIFICATION MOCK ===
 FAKE_USER_NAME=editor_user
 FAKE_USER_ROLE=editor
+# FAKE_USER_NAME=admin_user
+# FAKE_USER_ROLE=admin
 
 # === LOGGING ===
 LOG_LEVEL=info
