--- a/backend-javascript-cjs-starter/.env.production
+++ b/backend-javascript-cjs-starter/.env.production
@@ -14,6 +14,8 @@ DB_CLIENT=mock # pg | mysql | mock | mongo
 # === AUTHENTIFICATION MOCK ===
 FAKE_USER_NAME=editor_user
 FAKE_USER_ROLE=editor
+# FAKE_USER_NAME=admin_user
+# FAKE_USER_ROLE=admin
 
 # === LOGGING ===
 LOG_LEVEL=info
