--- a/backend-javascript-esm-starter/.env.development
+++ b/backend-javascript-esm-starter/.env.development
@@ -9,7 +9,7 @@ PORT=3000
 CORS_ORIGIN=http://localhost:3000
 
 # === BASE DE DONNEES ===
-DB_CLIENT=mock # pg | mysql | mock | mongo
+DB_CLIENT=pg # pg | mysql | mock
 
 # === AUTHENTIFICATION MOCK ===
 FAKE_USER_NAME=editor_user
