Improve websocket server on electron-starter

--- a/electron-starter/electron/package.json
+++ b/electron-starter/electron/package.json
@@ -4,6 +4,7 @@
   "description": "electron-starter description",
   "main": "main.js",
   "scripts": {
+    "dev": "electron .",
     "start": "electron .",
     "build": "electron-builder",
     "build-win": "electron-builder --win",
