--- a/electron-starter/electron/package.json
+++ b/electron-starter/electron/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "electron .",
     "start": "electron .",
+    "lint": "eslint .",
     "build": "electron-builder",
     "build-win": "electron-builder --win",
     "build-mac": "electron-builder --mac",
@@ -21,8 +22,11 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "electron": "^37.1.0",
-    "electron-builder": "^26.0.12"
+    "electron-builder": "^26.0.12",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0"
   },
   "build": {
     "win": {
