Update package dependencies on electron-starter

--- a/electron-starter/electron/package.json
+++ b/electron-starter/electron/package.json
@@ -22,16 +22,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "ws": "^8.18.3"
+    "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "electron": "^37.1.0",
-    "electron-builder": "^26.0.12",
-    "eslint": "^9.30.1",
-    "globals": "^16.3.0",
-    "jest": "^30.0.3",
-    "jest-cli": "^30.0.3"
+    "@eslint/js": "9.30.1",
+    "electron": "37.1.0",
+    "electron-builder": "26.0.12",
+    "eslint": "9.30.1",
+    "globals": "16.3.0",
+    "jest": "30.0.3",
+    "jest-cli": "30.0.3"
   },
   "build": {
     "win": {
