--- a/electron-starter/electron/package.json
+++ b/electron-starter/electron/package.json
@@ -31,10 +31,26 @@
     "eslint": "9.30.1",
     "globals": "16.3.0",
     "jest": "30.0.3",
-    "jest-cli": "30.0.3"
+    "jest-cli": "30.0.3",
+    "jest-environment-jsdom": "^30.0.2"
   },
   "build": {
+    "appId": "com.ganatan.electronstarter",
+    "productName": "ElectronStarter",
+    "files": [
+      "src/**/*",
+      "index.html",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "mac": {
+      "icon": "assets/icon.icns"
+    },
     "win": {
+      "icon": "assets/favicon.ico",
+      "target": "nsis",
       "forceCodeSigning": false
     },
     "nsis": {
