--- a/electron/electron-angular-starter/src/renderer/package.json
+++ b/electron/electron-angular-starter/src/renderer/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "angular-electron",
+  "name": "angular-app",
   "version": "0.0.0",
-  "main":"main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "electron": "electron ."
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +25,6 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
-    "electron": "^37.2.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
